@@ -64,7 +64,9 @@ class AssertionError(SQLAlchemyError):
 
 class NoSuchColumnError(KeyError, SQLAlchemyError):
     """Raised by ``RowProxy`` when a nonexistent column is requested from a row."""
-
+    
+class NoSuchTableError(InvalidRequestError):
+    """Raised by ``ForeignKey`` when the referred ``Table`` cannot be located."""
 
 class DisconnectionError(SQLAlchemyError):
     """Raised within ``Pool`` when a disconnect is detected on a raw DB-API connection.
